# glow2d

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml  remap.py  setup.cfg  setup.py  test.py  test_backup.py
gen_2d/: index.html
overview/: index.html
search/: search_index.json
src/glow2d/: __init__.py  _glow2d.py  _utils.py
src/glowraycast/: __init__.py  _glowraycast.py
test/: test.py
